--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
+    "start:dev": "ng serve --configuration=development",
     "build": "ng build",
+    "build:dev": "ng build --configuration=development",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
@@ -36,7 +38,9 @@
     "@angular/material": "^21.0.2",
     "@angular/platform-browser": "^21.0.0",
     "@angular/router": "^21.0.0",
+    "@sweetalert2/ngx-sweetalert2": "^14.1.1",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.26.17",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
